Service layer in worker module refactored